[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/todo-cards/scenes/delete-popup.gd" type="Script" id=1]
[ext_resource path="res://addons/todo-cards/scenes/flag-popup.gd" type="Script" id=2]
[ext_resource path="res://addons/todo-cards/scenes/import-popup.gd" type="Script" id=3]
[ext_resource path="res://addons/todo-cards/scenes/todo-cards.gd" type="Script" id=4]
[ext_resource path="res://addons/todo-cards/scenes/cards-container.gd" type="Script" id=5]
[ext_resource path="res://addons/todo-cards/scenes/card-init.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="TodoCards" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsContainer" type="ScrollContainer" parent="HBox/VBox"]
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="HBoxContainer" parent="HBox/VBox/CardsContainer"]
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="AddCard" type="VBoxContainer" parent="HBox/VBox/CardsContainer/Cards"]
margin_left = 532.0
margin_right = 788.0
margin_bottom = 20.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardInit" type="PanelContainer" parent="HBox/VBox/CardsContainer/Cards/AddCard"]
visible = false
margin_right = 256.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="HBox" type="HBoxContainer" parent="HBox/VBox/CardsContainer/Cards/AddCard/CardInit"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HBox/VBox/CardsContainer/Cards/AddCard/CardInit/HBox"]
margin_right = 226.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Hint" type="Label" parent="HBox/VBox/CardsContainer/Cards/AddCard/CardInit/HBox/LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Enter card name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="Button" parent="HBox/VBox/CardsContainer/Cards/AddCard/CardInit/HBox"]
margin_left = 230.0
margin_right = 242.0
margin_bottom = 24.0

[node name="AddButton" type="Button" parent="HBox/VBox/CardsContainer/Cards/AddCard"]
margin_right = 256.0
margin_bottom = 20.0
text = "add Card"

[node name="FlagPopup" type="WindowDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 386.0
margin_bottom = 126.0
window_title = "Select flag color"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="FlagPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagsGrid" type="GridContainer" parent="FlagPopup/VBox"]
margin_top = 6.0
margin_right = 382.0
margin_bottom = 91.0
size_flags_vertical = 6
custom_constants/vseparation = 7
columns = 4

[node name="DeleteButton" type="Button" parent="FlagPopup/VBox"]
margin_top = 102.0
margin_right = 382.0
margin_bottom = 122.0
size_flags_vertical = 4
text = "Delete Flag"

[node name="DeletePopup" type="WindowDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 386.0
margin_bottom = 86.0
window_title = "confirm"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="DeletePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="DeletePopup/VBox"]
margin_top = 12.0
margin_right = 382.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Are you Sure you want to delete {x} card ?"
align = 1
valign = 1
autowrap = true

[node name="HBox" type="HBoxContainer" parent="DeletePopup/VBox"]
margin_left = 57.0
margin_top = 52.0
margin_right = 325.0
margin_bottom = 72.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20

[node name="Yes" type="Button" parent="DeletePopup/VBox/HBox"]
margin_right = 124.0
margin_bottom = 20.0
rect_min_size = Vector2( 124, 0 )
text = "Yes"

[node name="No" type="Button" parent="DeletePopup/VBox/HBox"]
margin_left = 144.0
margin_right = 268.0
margin_bottom = 20.0
rect_min_size = Vector2( 124, 0 )
text = "No"

[node name="ImportPopup" type="WindowDialog" parent="."]
margin_right = 315.0
margin_bottom = 270.0
window_title = "Select a Card"
script = ExtResource( 3 )

[node name="VBox" type="VBoxContainer" parent="ImportPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="ImportPopup/VBox"]
margin_right = 315.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="ImportPopup/VBox/Scroll"]
margin_right = 315.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
